Fix progress bar alignment

--- a/src/components/PlaylistCard/ShufflePlaylistCard.css
+++ b/src/components/PlaylistCard/ShufflePlaylistCard.css
@@ -1,6 +1,9 @@
 .playlist-card-button-container {
     display: flex;
     justify-content: space-evenly;
+    min-height: 30px;
+    align-items: center;
+    padding: 0px 5px;
 }
 
 /* Add :root to override MUI specificity */
